# emotiva

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: fuurin.rs  kokeshi_tween.rs  sayuri.rs  viewer.rs
examples/basic_tween/: kaori.emotiva.ron  main.rs
examples/motion_play_reverse/: main.rs  motion_play_reverse_doll.emotiva.ron
examples/nested_callbacks/: main.rs  rina.emotiva.ron
examples/tween_lifecycle/: main.rs  tween_lifecycle_doll.emotiva.ron
src/: delay.rs  easing.rs  emotiva.rs  events.rs  format.rs  fx.rs  lib.rs  macros.rs  motion.rs  mouth.rs  quad.rs  snapshot.rs  transform.rs  tween.rs
src/anim/: eyes.rs  mod.rs  mouth.rs
src/api/: anim.rs  callback.rs  fx.rs  layer.rs  mod.rs  motion.rs  tween.rs
src/core/: delay.rs  easing.rs  events.rs  fx.rs  mod.rs  motion.rs  palette.rs  transform.rs  tween.rs
src/frontend/: mod.rs  quad.rs
test_data/: example.emotiva.ron  example_chibi.emotiva.ron  example_fuurin.emotiva.ron  kokeshi.emotiva.ron  sayuri.emotiva.ron
