[package]
name = "emotiva"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", optional = true }
rand = "0.9.1"
ron = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[[example]]
name = "viewer"
path = "examples/viewer.rs"

[features]
default = ["macroquad"]
macroquad = ["dep:macroquad"]