[package]
name = "emotiva"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", optional = true }
ron = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[[example]]
name = "viewer"
path = "examples/viewer.rs"

[features]
default = ["macroquad"]
macroquad = ["dep:macroquad"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
