[package]
name = "emotiva"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/araujol/emotiva"
homepage = "https://github.com/araujol/emotiva"
documentation = "https://docs.rs/emotiva"
description = "Lightweight layered 2D character animation runtime written in Rust."
readme = "README.md"
keywords = ["animation", "2d", "sprite", "gamedev", "visual-novel"]
categories = ["game-development", "graphics"]

include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE"]

[dependencies]
macroquad = { version = "0.4", optional = true }
ron = "0.10.1"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["macroquad"]
macroquad = ["dep:macroquad"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
